Fix login screen on mobile with low height

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -36,9 +36,10 @@ body {
     width: 100%;
     height: 100vh;
     background-color: #F6F7FF;
+    overflow-y: auto;
     .login-wrapper {
       width: 320px;
-      height: 620px;
+      height: auto;
       .login-slogan {
         color: #4a4a4a;
       }
